--- a/public/style1.css
+++ b/public/style1.css
@@ -1,5 +1,13 @@
-body{padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}a{color:#00B7FF}
-
-h3{
+rect {
+  fill:blue;
+}
+text {
+  font-family: "Open Sans";
+  text-anchor: middle;
+  color: rgb(34,​ 34,​ 34);
+  font-size: 40px;
+}
+h1{
     color: red;
 }
+
